[gd_scene load_steps=3 format=3 uid="uid://runycplntnxn"]

[ext_resource type="Script" path="res://equipment/exposed_reactor.gd" id="1_ktvh4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ukxk0"]

[node name="exposed_reactor" type="Node2D"]
z_index = -1
script = ExtResource("1_ktvh4")

[node name="Area2D" type="Area2D" parent="."]
z_index = -1
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_ukxk0")

[node name="fire_timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
